jsoup changelog

*** Release 1.3.3 [PENDING]
 * Implement Elements.empty() and Elements.remove(). This allows easy element removal, like:
    doc.select("iframe").remove();

*** Release 1.3.2 [2010-Aug-30]
 * Treat HTTP headers as case insensitive in Jsoup.Connection. Improves compatibility for HTTP responses.

 * Improved malformed table parsing by implementing ignorable end tags.

*** Release 1.3.1 [2010-Aug-23]
 * Removed dependency on Apache Commons-lang. Jsoup now has no external dependencies.

 * Added new Connection implementation, to enable easier and richer HTTP requests that parse to Documents. This includes
   support for gzip responses, cookies, headers, data parameters, user-agent, referrer, etc.
  
 * Added Element.ownText() method, to get only the direct text of an element, not including the text of its children.
 
 * Added support for selectors :containsOwn(text) and :matchesOwn(regex), to supplement Element.ownText().

 * Added support for non-pretty-printed HTML output, to more closely mirror the input HTML.

 * Further speed optimisations for parsing and output generation.
 
 * Fixed support for case-sensitive HTML escape entities.
   <http://github.com/jhy/jsoup/issues/issue/31>
 
 * Fixed issue when parsing tags with keyless attributes.
   <http://github.com/jhy/jsoup/issues/issue/32>

*** Release 1.2.3 [2010-Aug-04]
 * Added support for automatic input character set detection and decoding. Jsoup now automatically detects the encoding
   character set when parsing HTML from a File or URL. The parser checks the content-type header, then the
   <meta http-equiv> or <meta charset> tag, and finally falls back to UTF-8.

 * Added ability to configure the document's output charset, to control which characters are HTML escaped, and which
   are kept intact. The output charset defaults to the document's input charset. This simplifies non-ascii output.

 * Added full support for all new HTML5 tags.
