@@ -314,12 +314,12 @@ public class Tag {
 
         // block
         createBlock("P").setContainInlineOnly(); // emasculated block?
-        createBlock("H1").setAncestor("BODY", "HGROUP").setContainInlineOnly();
-        createBlock("H2").setAncestor("BODY", "HGROUP").setContainInlineOnly();
-        createBlock("H3").setAncestor("BODY", "HGROUP").setContainInlineOnly();
-        createBlock("H4").setAncestor("BODY", "HGROUP").setContainInlineOnly();
-        createBlock("H5").setAncestor("BODY", "HGROUP").setContainInlineOnly();
-        createBlock("H6").setAncestor("BODY", "HGROUP").setContainInlineOnly();
+        createBlock("H1").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
+        createBlock("H2").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
+        createBlock("H3").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
+        createBlock("H4").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
+        createBlock("H5").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
+        createBlock("H6").setAncestor("BODY", "HGROUP").setExcludes("H1", "H2", "H3", "H4", "H5", "H6");
         createBlock("UL");
         createBlock("OL");
         createBlock("PRE").setContainInlineOnly().setPreserveWhitespace();
